fix overflow on body

--- a/style.css
+++ b/style.css
@@ -15,9 +15,9 @@
     box-sizing: border-box;
   }
 
-  /* html, body {
+  body {
     overflow-x: hidden;
-  } */
+  }
 
   /* html {
     scroll-behavior: smooth;
